65 refactor (#66)
* use required args constructor

* refactor database tests

* refactor service tests

* add builder

* update filter

* add meta data to webp

* refactor tests

* add pitest configuration

* rename filter to filteroption

* rename filter to filteroption

* refactor classes and tests

* add test file

* refactor tests

* add thumbnail tests

* cosmetic

* update jacoco rule