@@ -3,6 +3,7 @@ plugins {
 	id("org.springframework.boot") version "3.4.5"
 	id("io.spring.dependency-management") version "1.1.7"
 	id("jacoco")
+	id("info.solidsoft.pitest") version "1.15.0"
 }
 
 group = "my"
@@ -60,6 +61,7 @@ dependencies {
 }
 
 tasks.withType<Test> {
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 	useJUnitPlatform()
 }
 
@@ -106,9 +108,20 @@ tasks.jacocoTestCoverageVerification {
 			fileTree(it) {
 				exclude("**/*Dto.class")
 				exclude("**/PhotoConfiguration.class")
+				exclude("**/*Exception.class")
 			}
 		})
 	)
 }
 
+
+pitest {
+	pitestVersion.set("1.15.0")
+	junit5PluginVersion.set("1.2.0")
+
+	targetClasses.set(listOf("my.photomanager.*"))
+	targetTests.set(listOf("my.photomanager.*Test"))
+
+	mutationThreshold.set(80)
+}
 
